fix: protect task data and unify Twizzy responses