@@ -2,12 +2,13 @@
 
 > Your task-list twin: quick with the reminders, light on the lectures.
 
-Twizzy is a playful command-line task manager built for the NUS CS2103T individual project. It tracks todos, deadlines, and events without turning productivity into a corporate meeting.
+Twizzy is a playful task manager with a dark chat-style GUI and a console interface, built for the NUS CS2103T individual project. It tracks todos, deadlines, and events without turning productivity into a corporate meeting.
 
 ## What it does
 
 - Adds todos, deadlines, and events
-- Lists everything in one numbered view
+- Lists active tasks in numbered Todos, Deadlines, and Events sections
+- Finds active tasks by a keyword
 - Marks tasks as done or brings them back
 - Deletes tasks that no longer deserve screen time
 - Snoozes tasks and returns them to the active list on demand
@@ -24,6 +25,8 @@ Twizzy requires **JDK 25**.
 3. Set the project SDK and language level to JDK 25.
 4. Run the Gradle `application > run` task to open the GUI. Alternatively, mark `src/main/resources` as a **Resources Root** before running `twizzy.gui.Launcher.main()` directly.
 5. Run `Twizzy.main()` only when you want the console interface.
+
+When running `Launcher.main()` directly in IntelliJ on Java 25, add `--enable-native-access=javafx.graphics` to the Run Configuration's VM options to suppress Java's JavaFX native-access warning.
 
 You should see:
 
@@ -50,6 +53,7 @@ ____________________________________________________________
 | Add a deadline | `deadline <description> /by <yyyy-MM-dd>` | `deadline submit report /by 2026-09-18` |
 | Add an event | `event <description> /from <yyyy-MM-dd> /to <yyyy-MM-dd>` | `event recess week /from 2026-09-21 /to 2026-09-27` |
 | Show tasks | `list` | `list` |
+| Find active tasks | `find <keyword>` | `find report` |
 | Show command help | `help` | `help` |
 | Complete a task | `mark <number>` | `mark 2` |
 | Reopen a task | `unmark <number>` | `unmark 2` |
@@ -59,7 +63,9 @@ ____________________________________________________________
 | Return a snoozed task | `unsnooze <number>` | `unsnooze 1` |
 | Exit | `bye` | `bye` |
 
-Dates use the unambiguous `yyyy-MM-dd` format. Twizzy displays them in a friendlier form such as `Sep 18 2026`.
+Dates use the unambiguous `yyyy-MM-dd` format. Twizzy displays them in a friendlier form such as `18 Sep 2026`.
+
+The GUI uses a dark background, deep-blue user bubbles, and blue-grey Twizzy bubbles. Task status is shown with `◷` for pending and `★` for completed.
 
 ## Example
 
@@ -72,15 +78,19 @@ list
 
 ```text
 Your active tasks, gang:
-1.[T][X] survive Monday
-2.[D][ ] submit report (by: Sep 18 2026)
+Todos
+1. ★ survive Monday
+
+Deadlines
+2. ◷ submit report
+  ↳ Due: 18 Sep 2026
 ```
 
 For complete usage and error-handling details, see the [Twizzy User Guide](docs/README.md).
 
 ## Data and privacy
 
-Twizzy stores tasks locally in `data/twizzy.txt`. The `data/` directory is ignored by Git, so personal tasks are not committed to the repository by default.
+Twizzy stores tasks locally at `data/twizzy.txt`, relative to the folder from which it is run. It creates only that local `data/` folder and its temporary replacement file while saving; it never writes task data to your home folder. The `data/` directory is ignored by Git, so personal tasks are not committed to the repository by default.
 
 ## Testing
 
